# GPTPU

./: .gitmodules  CMakeLists.txt  Makefile  Makefile_gptpu  README.md  build_gasket_driver.ipynb  configure.cfg  conv_edgetpu.tflite  hotspot3D_ex_model.tflite  tutorial.ipynb
app/: chain_test.cc  minimal.cc  openctpu.cc
app/gaussian-elimination-pthreads-openmp/: Makefile  README.md  chunk_thpool_gauss.c  chunk_threads_gauss.c  gauss.c  openmp_gauss.c  run.sh  script.sh  thpool.c  thpool.h  thpool_gauss.c  threads_gauss.c
app/pageRank/: Makefile  get_iteration  get_iteration.cc  pagerank  pagerank.cc  run
app/pkgs/apps/blackscholes/src/: Makefile  blackscholes  blackscholes.c  inputgen.c  run
app/rodinia_3.1/cuda/backprop/: Makefile  backprop.c  backprop.h  backprop_cuda.cu  facetrain.c  imagenet.c  run
app/rodinia_3.1/cuda/hotspot3D/: 3D  3D.cu  Makefile  hotspot3D.tflite  opt1.cu  record.txt  run  syth.py
app/rodinia_3.1/openmp/backprop/: Makefile  backprop  backprop.c  backprop.h  backprop_kernel.c  facetrain.c  run
app/rodinia_3.1/openmp/lud/: run
app/rodinia_3.1/openmp/lud/common/: common.c  common.h
app/rodinia_3.1/openmp/lud/omp/: Makefile  lud.c  lud_omp  lud_omp.c  run.sh
docker/: Dockerfile  nano_sources.list  update_sources.sh
include/: fifo.h  gptpu.h  gptpu_buffer.h  gptpu_dim.h  gptpu_runtime.h  gptpu_runtime_node.h  gptpu_utils.h
scripts/: build.sh  docker_launch_container.sh  docker_setup.sh  dual_git_ownership_fix.sh
src/: CMakeLists.txt  compile_conv.py  create_model.py  create_model_try_scale.py  demo.cc  fifo.cc  gptpu.cc  gptpu.h  gptpu_buffer.cc  gptpu_dim.cc  gptpu_runtime.cc  gptpu_utils.cc  int16x8_example.py  make_all_conv.py  make_mm2convAvg_models.py  make_mm2conv_models.py  make_model.cc  make_model.h  make_temp.cc  make_temp.h  new_create_model.py  offset.cc  offset.h  openctpu.cc  pagerank_1K_iter1_edgetpu.tflite  run.py  run_a_model.cc  run_a_model_parallel.cc  run_a_pagerank.cc  search_256mmBlk_optimal.cc  search_mm2conv_optimal.cc  search_random_conv_optimal.cc  simulate_hotspot_acc.py  simulate_pagerank_acc.py  utils.cc  utils.h
src/Python/: create_tflite_model.py  models.py  search_mm2conv_optimal.py
src/Python/utils/: utils.py
src/edgetpu_plugin/: Mymodel_utils.cc  Mymodel_utils.h  Mymultiple_tpus_performance_analysis.cc  dense.cc  dense.h  make_instructions.md
template/: conv_temp_512x128x8x4x8x4x8_uint8.tflite  conv_temp_8192x8x16x8x2x8x2_uint8.tflite
utils/: CMakeLists.txt  model_utils.cc  quality.cpp
utils/include/: model_utils.h  quality.h
